บันทึกการแก้ไขก่อน rebase

--- a/page3.html
+++ b/page3.html
@@ -234,27 +234,28 @@
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
-      <h3>Media</h3>
-      <p>ใช้ใส่รูป วิดีโอ เสียง</p>
+      <h3>JavaScript</h3>
+      <p>ใช้เพิ่ม “ความสามารถ” ให้เว็บ เช่น ปุ่มกดแล้วแสดงข้อความ</p>
       <div class="overlay"></div>
       <aside class="slide-panel">
         <div class="panel-head"><strong>example-code</strong></div>
         <button class="copy-btn" data-target="code3">Copy</button>
         <pre><code id="code3">
-          &lt;img src="..." alt="..."&gt; &lt;/img src="..." alt="..."&gt;
-          &lt;video controls&gt; &lt;/video controls&gt;
-          &lt;audio controls&gt; &lt;/audio controls&gt;
-          &lt;figure> + figcaption&gt; &lt;/figure> + figcaption&gt;
+          &lt;script&gt;
+            alert('สวัสดี HTML!')
+          &lt;/script>&gt;
         </code></pre>
       </aside>
     </div>
 
     <div class="card">
       <button class="toggle-btn">code</button>
-      <h3>Links & Navigation</h3>
-      <p>a:ใช้สร้างลิงก์</p>
-      <p>target="_blank":เปิดลิงก์ในแท็บใหม่</p>
-      <p>id="section1":ใช้เชื่อมกับลิงก์ภายในหน้า</p>
+      <h3>Accessibility</h3>
+      <p>ใส่ alt ทุกภาพ</p>
+      <p>ใช้ label กับช่องกรอกข้อมูล</p>
+      <p>ใช้หัวข้อ h1–h6 ตามลำดับ</p>
+      <p>ใช้หัวข้อ h1–h6 ตามลำดับ</p>
+      <p>ใช้ปุ่ม button แทน div ที่กดได้</p>
       <div class="overlay"></div>
       <aside class="slide-panel">
         <div class="panel-head"><strong>example-code</strong></div>
@@ -267,41 +268,38 @@
     </div>
   </div>
 
-    <div class="card">
-      <button class="toggle-btn">code</button>
-      <h3>กล่องขวา</h3>
-      <p>Example 1 Right</p>
-      <div class="overlay"></div>
-      <aside class="slide-panel">
-        <div class="panel-head"><strong>example-code</strong></div>
-        <button class="copy-btn" data-target="code2">Copy</button>
-        <pre><code id="code2">&lt;p&gt;This is a paragraph.&lt;/p&gt;</code></pre>
-      </aside>
-    </div>
-  </div>
-
   <div class="row">
     <div class="card">
       <button class="toggle-btn">code</button>
-      <h3>กล่องซ้าย</h3>
-      <p>Example 2 Left</p>
+      <h3>Meta & SEO</h3>
+      <p>อยู่ใน head</p>
+      <p>ใช้บอกข้อมูลเบื้องหลัง เช่น คำอธิบายเว็บ หรือรูปเวลาแชร์</p>
       <div class="overlay"></div>
       <aside class="slide-panel">
         <div class="panel-head"><strong>example-code</strong></div>
         <button class="copy-btn" data-target="code3">Copy</button>
-        <pre><code id="code3">&lt;div class="box"&gt;Box content&lt;/div&gt;</code></pre>
+        <pre><code id="code3">
+          &lt;meta name="description" content="สอน HTML พื้นฐาน"&gt;
+          &lt;meta property="og:title" content="HTML พื้นฐาน"&gt;
+          &lt;meta property="og:image" content="cover.jpg"&gt;
+        </code></pre>
       </aside>
     </div>
 
     <div class="card">
       <button class="toggle-btn">code</button>
-      <h3>กล่องขวา</h3>
-      <p>Example 2 Right</p>
+      <h3>CSS</h3>
+      <p>โครงสร้างพื้นฐานของ CSS</p>
       <div class="overlay"></div>
       <aside class="slide-panel">
         <div class="panel-head"><strong>example-code</strong></div>
         <button class="copy-btn" data-target="code4">Copy</button>
-        <pre><code id="code4">&lt;img src="cat.jpg" alt="Cat"&gt;</code></pre>
+        <pre><code id="code4">&lt;
+          ตัวเลือก (Selector) 
+          {
+            คุณสมบัติ (property): ค่า (value);
+          }
+        </code></pre>
       </aside>
     </div>
   </div>
