--- a/page4.html
+++ b/page4.html
@@ -286,7 +286,7 @@
 
     <div class="card">
       <button class="toggle-btn">code</button>
-      <h3>โนืะ</h3>
+      <h3>Font</h3>
       <p>ขนาดตัวอักษร (Font)</p>
       <div class="overlay"></div>
       <aside class="slide-panel">
