--- a/page2.html
+++ b/page2.html
@@ -214,7 +214,7 @@
 </head>
 <body>
 
-  <h1>HTML/</h1>
+  <h1>HTML2</h1>
 
   <div class="dropdown">
     <button class="dropbtn" onclick="toggleMenu()">Menu</button>
